# osaifu

./: .envrc.localhost  buf.gen.yaml  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
api/: buf.yaml
api/osaifu/wallet/v1/: wallet.proto
backend/gateway/: go.mod  main.go
backend/wallet/: Cargo.toml  Makefile  main.rs
backend/wallet/domain/: Cargo.toml
backend/wallet/domain/src/aggregate/: aggregate.rs  mod.rs
backend/wallet/domain/src/entity/: base.rs  mod.rs  wallet.rs
backend/wallet/domain/src/repository/: mod.rs  resource.rs
backend/wallet/domain/src/vo/: base.rs  id.rs  mod.rs  money.rs
backend/wallet/infrastructure/: Cargo.toml
backend/wallet/infrastructure/src/: lib.rs
backend/wallet/infrastructure/src/grpc/: service.rs
backend/wallet/infrastructure/src/postgres/: mod.rs  models.rs  query_wallet.rs  schema.rs  wallet.rs
backend/wallet/infrastructure/src/ulid/: id.rs
backend/wallet/interface/: Cargo.toml  build.rs
backend/wallet/interface/src/: lib.rs
backend/wallet/interface/src/controller/: controller.rs  mod.rs
backend/wallet/migrations/2021-10-27-055535_wallets/: up.sql
backend/wallet/query/: Cargo.toml
backend/wallet/query/src/: lib.rs
backend/wallet/query/src/interactor/: list_wallets.rs  mod.rs
backend/wallet/query/src/port/: list_wallets.rs  mod.rs  query_port.rs
backend/wallet/query/src/repository/: wallet.rs
backend/wallet/query/src/view/: wallet.rs
backend/wallet/usecase/src/interactor/: create_wallet.rs  delete_wallet.rs  get_wallet.rs  mod.rs
frontend/ui/: package.json
(+5 files in other folders)
