[package]
name = "domain"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.16.0"
rust_decimal_macros = "1.16.0"
regex = "1.5.4"
derive-new = "0.5.9"
derive_builder = "0.10.2"
getset = "0.1.1"
anyhow = "1.0.44"
parse-display = "0.5.3"
derive_more = "0.99.16"
